@@ -1,3 +1,8 @@
+2008-03-27  Tim Vandermeersch <tim.vandermeersch@gmail.com>
+
+	* include/openbabel/forcefield.h, src/forcefield.cpp: Working
+	Newton2NumLineSearch. Used only for SteepestDescent at the moment.
+
 2008-03-26 Chris Morley
 
 	* include/openbabel/parsmart.h, src/parsmart.cpp:
